--- a/PracticaRuby1/README
+++ b/PracticaRuby1/README
@@ -1,3 +1,2 @@
-== PracticaRuby1
-
-You should document your project here.
+*PDOO 
+Juego Civitas basado en modelo VMC (vista textual) realizado en Ruby para las prácticas de PDOO (UGR) en 2019/2020.
